// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingPayoutInfo should render correctly 1`] = `
<View
  style={
    {
      "gap": 16,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#7D675E",
              "marginRight": 8,
            },
            false,
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 30,
            },
            false,
            false,
          ],
          false,
        ]
      }
    >
      payout pending
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#EAE3DF",
            "flexShrink": 1,
            "height": 1,
            "width": "100%",
          },
          [
            {
              "flexGrow": 1,
            },
            false,
          ],
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      amount
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              undefined,
              {
                "justifyContent": "center",
              },
              {
                "height": 13,
                "width": 179,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginBottom": -40,
                  "marginTop": -40,
                },
                {
                  "gap": 2,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
            >
              <test-file-stub
                fill="#888"
                style={
                  [
                    {
                      "height": 24,
                      "width": 24,
                    },
                    {
                      "height": 15,
                      "width": 15,
                    },
                  ]
                }
              />
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                  },
                  {
                    "alignItems": "baseline",
                  },
                  {
                    "gap": 3,
                    "paddingTop": 4,
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 22,
                        "lineHeight": 29,
                      },
                    ],
                    false,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -4.62,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  .
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  2
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  5
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
              </Text>
              <View
                style={
                  {
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        {
                          "fontFamily": "Baloo2-Medium",
                        },
                        false,
                        {
                          "fontSize": 16,
                          "lineHeight": 24,
                          "paddingBottom": 2,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  sats
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      will be sent to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#EAE3DF",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
              ],
              false,
            ]
          }
        >
          bcrt
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            1qxhk
          </Text>
          l ... e
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            5raag
          </Text>
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      ETA
    </Text>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          01:12:00
        </Text>
        <test-file-stub
          fill="#037DB5"
          style={
            [
              {
                "height": 16,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      slots
    </Text>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          20/100
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <RNGestureHandlerButton
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      exclusive={true}
      handlerTag={1}
      handlerType="NativeViewGestureHandler"
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
      touchSoundDisabled={false}
    >
      <View
        accessible={true}
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#F56522",
            "borderColor": "#F56522",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#FFFCFA",
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
                false,
              ],
              false,
            ]
          }
        >
          payout pending
        </Text>
        <test-file-stub
          fill="#FFFCFA"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 12,
                "marginLeft": 4,
                "marginTop": -1,
                "width": 12,
              },
            ]
          }
        />
      </View>
    </RNGestureHandlerButton>
  </View>
</View>
`;

exports[`PendingPayoutInfo should render correctly when eta is not known yet 1`] = `
<View
  style={
    {
      "gap": 16,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#7D675E",
              "marginRight": 8,
            },
            false,
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 30,
            },
            false,
            false,
          ],
          false,
        ]
      }
    >
      payout pending
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#EAE3DF",
            "flexShrink": 1,
            "height": 1,
            "width": "100%",
          },
          [
            {
              "flexGrow": 1,
            },
            false,
          ],
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      amount
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              undefined,
              {
                "justifyContent": "center",
              },
              {
                "height": 13,
                "width": 179,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginBottom": -40,
                  "marginTop": -40,
                },
                {
                  "gap": 2,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
            >
              <test-file-stub
                fill="#888"
                style={
                  [
                    {
                      "height": 24,
                      "width": 24,
                    },
                    {
                      "height": 15,
                      "width": 15,
                    },
                  ]
                }
              />
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                  },
                  {
                    "alignItems": "baseline",
                  },
                  {
                    "gap": 3,
                    "paddingTop": 4,
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 22,
                        "lineHeight": 29,
                      },
                    ],
                    false,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -4.62,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  .
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  2
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  5
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
              </Text>
              <View
                style={
                  {
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        {
                          "fontFamily": "Baloo2-Medium",
                        },
                        false,
                        {
                          "fontSize": 16,
                          "lineHeight": 24,
                          "paddingBottom": 2,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  sats
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      will be sent to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#EAE3DF",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
              ],
              false,
            ]
          }
        >
          bcrt
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            1qxhk
          </Text>
          l ... e
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            5raag
          </Text>
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      ETA
    </Text>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          TBA
        </Text>
        <test-file-stub
          fill="#037DB5"
          style={
            [
              {
                "height": 16,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "fontFamily": "Baloo2-Regular",
              "fontSize": 20,
              "letterSpacing": 0.2,
              "lineHeight": 28,
            },
          ],
          false,
        ]
      }
    >
      slots
    </Text>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          20/100
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <RNGestureHandlerButton
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      exclusive={true}
      handlerTag={2}
      handlerType="NativeViewGestureHandler"
      onGestureEvent={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onHandlerStateChange={[Function]}
      rippleColor={0}
      touchSoundDisabled={false}
    >
      <View
        accessible={true}
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#F56522",
            "borderColor": "#F56522",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#FFFCFA",
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.5,
                  "lineHeight": 24,
                  "textTransform": "uppercase",
                },
                false,
              ],
              false,
            ]
          }
        >
          payout pending
        </Text>
        <test-file-stub
          fill="#FFFCFA"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 12,
                "marginLeft": 4,
                "marginTop": -1,
                "width": 12,
              },
            ]
          }
        />
      </View>
    </RNGestureHandlerButton>
  </View>
</View>
`;
